# cowsay

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/fortune/: README.md  generate.sh  workflow-template.json
src/: bindings.rs  lib.rs
wit/: world.wit
