[package]
name = "cowsay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:cowsay"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "wit/deps/logging" }

[dependencies]
bitflags = "2.4.2"
ferris-says = "0.3.1"
wit-bindgen-rt = "0.21.0"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 's'
